# UniBERT

./: .commitlintrc.json  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  app.py  db_init.sql  pyproject.toml  requirements.txt
.github/workflows/: cmake-single-platform.yml  model_ci.yml
data/: fiot_data.json
diagrams/: model_packages_diagram.md  model_scenaries_diagram.md
frontend/unibert-client/: .gitignore  CMakeLists.txt  chatmessage.cpp  chatmessage.h  chatwidget.cpp  chatwidget.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
frontend/unibert-desktop-client/: .gitignore  CMakeLists.txt  chatwidget.cpp  chatwindow.h  main.cpp
frontend/unibert-desktop-client/.github/workflows/: cmake-single-platform.yml
frontend/unibert-desktop-client/diagrams/: components_diagram.md  relations_diagram.md  sequence_diagram.md
frontend/unibert-desktop-client/model/: basic_http_client.cpp  basic_http_client.h
frontend/unibert-desktop-client/src/: main.cpp
frontend/unibert-desktop-client/src/controller/: README.md  chat_controller.cpp  chat_controller.h
frontend/unibert-desktop-client/src/model/: README.md
frontend/unibert-desktop-client/src/model/data_provider/: answers_provider_i.h  local_answer_provider.cpp  local_answer_provider.h  server_answer_provider.cpp  server_answer_provider.h
frontend/unibert-desktop-client/src/model/network/: basic_http_client.cpp  basic_http_client.h  http_client_i.h  http_client_unittest.cpp
frontend/unibert-desktop-client/src/view/: mainwindow.cpp  mainwindow.h
frontend/unibert-desktop-client/src/view/chat/: chatmessage.cpp  chatmessage.h  chatwidget.cpp  chatwidget.h  chatwindow.cpp  chatwindow.h
frontend/unibert-desktop-client/view/: README.md  chatmessage.cpp  chatmessage.h  chatwidget.cpp  chatwidget.h  chatwindow.cpp  chatwindow.h  mainwindow.cpp
model/: app.py  config.py  data_preparation.py  evaluation.py  train.py
model/database/: db_manager.py  init_db.py
model/diagrams/: model_er_diagram.md
